CHANGELOG
=========

MyKnowledgeBase version 6.6 - october 2020
- Improved accessibility
- Better support for screen readers
- Because of this the CSS of main navigation is updated
- File header: added skip to content link
- Added ARIA Landmarks in several files
- Several minor adjustments

MyKnowledgeBase version 6.5 - may 2020
- Added extra class to bottom postmeta of single event page
- Added setting to show or hide Search Bar
- Added setting for knowledge base to show a View All link
- Minor changes in code
- Readme file: updated info about theme features and settings

MyKnowledgeBase version 6.4 - january 2020
- Removed support for IE 8 and older
- Added basic support for new editor
- Updated head section
- Changed logo tagline from h2 into div
- Added class "list-image" to featured image in blog list
- This class replaces native class "wp-post-image"
- Removed native class "wp-post-image" from stylesheet
- Removed unnecessary whitespaces from most files
- Minor changes in code

MyKnowledgeBase version 6.3 - july 2018
- File style: changed CSS of many floating elements
- File style: removed unnecessary CSS
- File style: mobile menu update
- File comments: changed comments-title from h4 into h3

MyKnowledgeBase version 6.2 - june 2018
- Fixed mistake in POT file
- Readme file: removed donate link

MyKnowledgeBase version 6.1 - june 2018
- File comments: minor fix
- Both knowledge base files: minor fix
- Updated file style
- Updated theme author info

MyKnowledgeBase version 6.0 - february 2018
- Several minor adjustments
- Updated files style and custom-editor-style

MyKnowledgeBase version 5.9 - february 2018
- Several minor adjustments
- Updated file style and functions

MyKnowledgeBase version 5.8 - february 2018
- Please ignore my notification in previous version regarding removal from repository
- Decided not to remove it yet
- Added a static font-size in body tag
- Now other font-sizes will scale better
- Updated h1-h6 headings